# exercism-hs

./: .hspec  CHANGELOG.md  README.md  exercism-hs.cabal
.github/workflows/: runhaskell.yml
src/: Exercism.hs
src/Exercism/: CollatzConjecture.hs  Hamming.hs  RobotSimulator.hs  Yacht.hs
test/: ExercismSpec.hs
test/Exercism/: CollatzConjectureSpec.hs  HammingSpec.hs  RobotSimulatorSpec.hs  YachtSpec.hs
